log.txt
common/dll/DLL_unsafe.c:141:15: error: static declaration of ‘dll_remove’ follows non-static declaration
 static void * dll_remove(dll_t * list, node_t * to_rm)
               ^~~~~~~~~~
common/dll/DLL_unsafe.c:36:8: note: previous declaration of ‘dll_remove’ was here
 void * dll_remove(dll_t * list, node_t * to_rm);
        ^~~~~~~~~~
